--- a/partials/header.html
+++ b/partials/header.html
@@ -23,7 +23,7 @@
 </div>
 
       <ul>
-        <li><a href="/" aria-current="page">Home</a></li>
+        <li><a href="/">Home</a></li>
         <li><a href="/students.html">Students</a></li>
         <li><a href="/aboutus.html">About</a></li>
         <li><a href="/contactus.html">Contact</a></li>
